--- a/assignment1.html
+++ b/assignment1.html
@@ -16,9 +16,66 @@
         <div class="container">
             <img class="image" src="donation13.png" alt="">
             <div class="centered"> <h1> #HELPO!</h1></div>
+            <div class="bottom-right"><h2>YES! I want to help. We must first choose and value human life.</h2>
+                <h2 class="link-button"> <button> Donate Now</button></h2>
+            </div>
 
         </div>
+    </section>
 
+    <section>
+        <div class="container2"><h2 class="centered1"> Donate as much as you can!</h2>
+            <div><h3 class="centered1"> All donations are welcome, whether it's a one-time gift, a recurring donation or memorial gift.</h3></div>
+        
+        </div>
+    </section>
+
+    <section>
+    <div class="container3">
+        <div class="flexible-container">
+
+            <div> <button class="pink-button"> 100 tk</button></div>
+            <div> <button class="pink-button">200 tk</button></div>
+            <div><button class="pink-button">500 tk</button></div>
+            <div> <button class="pink-button">1000 tk</button></div>
+            <div><button class="pink-button"> 5000 tk</button></div>
+        
+        </div>
+        <div><button>Donate Now</button></div>
+        <div> <h2 class="centered1">Their needs & Our Donate Plan </h2>
+        </div>
+
+    </div>
+    </section>
+
+    <section>
+        <div class="flexible-container">
+            <div id="food" class="plan">
+                <h2> Food for a family.</h2>
+                <h3> Support them to fight against hunger & poverty. For poor people, we are promoting the cause of <b> Sustainable food & Nutrition Security.</b></h3>
+            </div>
+            <div id="shelter" class="plan">
+                <h2>Shelter for a family.</h2>
+                <h3> How many times must afamily rebuild? Every year, floods displace thousands on the chars. Half country is underwater, the water is still rising. People are trapped without shelter.</h3>
+            </div>
+            <div id="baby" class="plan"> 
+                <h2>Education for a child</h2>
+                <h3>Your donation will help us accomplish our mission of ensuring for child education.</h3>
+             </div>
+
+             <div id="medicine" class="plan">
+                <h2> Providng medicine</h2>
+                <h3>  </h3>
+             </div>
+             <div id="planlist" class="plan">
+                <h2> Our plans towards them: </h2>
+
+             </div>
+
+
+
+
+        </div>
 
 
     </section>
